# nn

./: .gitignore  README.md  datasets.py  mlp.py  mlp_strokes.py  pyproject.toml  requirements.txt  rnn.py  utils.py
