[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["jaymody <jaykmody@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
tqdm = "^4.62.3"
torch = "1.9.0"
torchvision = "0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
ipykernel = "^6.6.0"
matplotlib = "^3.5.1"
Pillow = "^9.0.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
